# functional-rps

backend/: .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker_entrypoint.sh  gunicorn_conf.py  main.py  pyproject.toml
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: endpoint.py  games.py
backend/app/api/v1/metadata/: tags.py
backend/app/core/: base.py  config.py  db.py  schemas.py
backend/app/dal/: rps_game.py
backend/app/models/: __init__.py  default.py  games.py
backend/app/models/migrations/: env.py
backend/app/models/migrations/versions/: 6a8a1ca027e2_.py  c4387b28c5b1_.py
