[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["marlenc <marlen.carrillo@emotive.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
alembic = "^1.13.2"
pre-commit = "^3.7.1"
pydantic-settings = "^2.3.4"
python-jose = "^3.3.0"
bcrypt = "4.0.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
mypy = "^1.10.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
